fixProjectsJumping

--- a/src/sass/partials/_projects.scss
+++ b/src/sass/partials/_projects.scss
@@ -54,6 +54,11 @@
 		padding-left: 20px;
 		float: right;
 	}
+	/*==========Дьоргання слайдера==========*/
+	.col-md-3{
+		min-height: 0;
+	}
+	/*======================================*/
 	.both{
 		clear: both;
 		margin-bottom: 20px;
@@ -78,10 +83,10 @@
 		display: inline-block;
 	}
 	.carousel {
-    margin-bottom: 0;
-    padding: 10px 10px 10px 10px;
-    margin-left: -5.4%;
-    margin-right: -5.4%;
+    	margin-bottom: 0;
+    	padding: 10px 10px 10px 10px;
+    	margin-left: -5.4%;
+    	margin-right: -5.4%;
 	}
 	/* The controlsy */
 	.carousel-control {
@@ -102,7 +107,8 @@
 		height: 230.797px;
 		position: absolute;
 		z-index: 1;
-		top: 2px;
+		/*top: 2px;*/
+		top: 0px;
 		line-height: 220px;
 		text-align: center;
 		background-color: $blue-base-color;
